Rename workflow and update Ubuntu version

--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -1,10 +1,9 @@
-name: Get_ARM_Host
+name: Get_ARM_Now
 on: workflow_dispatch
-
 jobs:
   arm-job:
-    runs-on: ubuntu-22.04-arm64 # Đổi sang 22.04 cho ổn định và nhanh có máy
+    runs-on: ubuntu-24.04-arm64
     steps:
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
-        timeout-minutes: 350 # Treo gần 6 tiếng
+        timeout-minutes: 300
