--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -2,7 +2,7 @@ name: Get_ARM_Now
 on: workflow_dispatch
 jobs:
   arm-job:
-    runs-on: ubuntu-24.04-arm64
+    runs-on: [ubuntu-latest, arm64]
     steps:
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
